force-app/main/default/objects/Trade_Finance__x/Trade_Finance__x.object-meta.xml
<CustomObject>
    <description>Trade Finance Accounts</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>TradeFinance</externalName>
    <label>Trade Finance</label>
    <pluralLabel>Trade Finance</pluralLabel>
</CustomObject>