force-app/main/default/objects/Trade_Finance__x/fields/CAP_Limit__c.field-meta.xml
<CustomField>
    <fullName>CAP_Limit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>CAP Limit ($)</description>
    <externalDeveloperName>CAPLimit</externalDeveloperName>
    <label>CAP Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>