force-app/main/default/objects/Trade_Finance__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_EBD</complianceGroup>
    <description>Customer lookup via External Id</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trade Finance</relationshipLabel>
    <relationshipName>Trade_Finance</relationshipName>
    <type>IndirectLookup</type>
</CustomField>