force-app/main/default/objects/Trade_Finance__x/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Limit Amount</description>
    <externalDeveloperName>Limit</externalDeveloperName>
    <label>Limit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>