force-app/main/default/objects/Trade_Finance__x/fields/Limit_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Limit_Expiry__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_EBD</complianceGroup>
    <description>Limit Expiry Date</description>
    <externalDeveloperName>LimitExpiry</externalDeveloperName>
    <label>Limit Expiry</label>
    <type>Date</type>
</CustomField>