force-app/main/default/objects/Trade_Finance__x/fields/OLL_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>OLL_Account_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_EBD</complianceGroup>
    <description>OLL Account Number</description>
    <externalDeveloperName>OLLAccountNumber</externalDeveloperName>
    <label>OLL Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>