force-app/main/default/objects/Trade_Finance__x/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>CAP Sequence Number</description>
    <externalDeveloperName>SequenceNumber</externalDeveloperName>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>