force-app/main/default/objects/Trade_Finance__x/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_EBD</complianceGroup>
    <description>Sub Product Code</description>
    <externalDeveloperName>SubProductCode</externalDeveloperName>
    <label>Sub Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>