force-app/main/default/objects/Trade_Finance__x/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - EBD</complianceGroup>
    <description>Term</description>
    <externalDeveloperName>Term</externalDeveloperName>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>